--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: WiseCash Knowledge Base
-meta_description: Knowledge Base for WiseCash (lightweight cash-flow forecasting SaaS app)
+title: Yathit Knowledge Base
+meta_description: Knowledge Base for Yathit (lightweight cash-flow forecasting SaaS app)
 ---
 {% capture index_content %}
 Most commonly read pages:
