--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Yathit Knowledge Base
-meta_description: Knowledge Base for Yathit (lightweight cash-flow forecasting SaaS app)
+meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
 ---
 {% capture index_content %}
 Most commonly read pages:
@@ -9,7 +9,7 @@ Most commonly read pages:
 * [Getting Started,Getting Started]
 
 
-[Contact us](mailto:support@wisecashhq.com) if you have any question!
+[Contact us](mailto:info@yathit.com) if you have any question!
 {% endcapture %}
 {{ index_content | markdownify }}
 
