--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@ title: Yathit Knowledge Base
 meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
 ---
 {% capture index_content %}
+
+Install Yathit InboxCRM Chrome Extension to get started.
+
+<div class="centered">
+    <a id="install-sugarcrm" class="button--primary themed">Add to Chrome</a>
+</div>
+
 Most commonly read pages:
 
-* [Getting Started,Getting Started]
+* [Getting Started]
+* [Contact Sync]
 
 
 [Contact us](mailto:info@yathit.com) if you have any question!
