--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ Most commonly read pages:
 
 
 [Contact us](mailto:info@yathit.com) if you have any question!
+
+Read [our blogs](/blog/) for more information.
+
 {% endcapture %}
 {{ index_content | markdownify }}
 
