--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ Install Yathit InboxCRM Chrome Extension to get started.
     <a id="install-sugarcrm" class="button--primary themed">Add to Chrome</a>
 </div>
 
+Submit your feature request in [UserVoice](http://yathit.uservoice.com/).
+
+For paid user, get support via [email](mailto:support@yathit.com).
+
 Most commonly read pages:
 
 * [Getting Started]
