add youtube videos

--- a/index.html
+++ b/index.html
@@ -5,23 +5,15 @@ meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
 ---
 {% capture index_content %}
 
-Install Yathit InboxCRM Chrome Extension to get started.
 
-<div class="centered">
-    <a id="install-sugarcrm" class="button--primary themed">Add to Chrome</a>
-</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" frameborder="0" allowfullscreen></iframe>
+
+
+[Contact us](mailto:info@yathit.com) if you have any question!
 
 Submit your feature request in [UserVoice](http://yathit.uservoice.com/).
 
 For paid user, get support via [email](mailto:support@yathit.com).
-
-Most commonly read pages:
-
-* [Getting Started]
-* [Contact Sync]
-
-
-[Contact us](mailto:info@yathit.com) if you have any question!
 
 Read [our blogs](/blog/) for more information.
 
