--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" frameborder="0" allowfullscreen></iframe>
 
 
-[Contact us](mailto:info@yathit.com) if you have any question!
-
-Submit your feature request in [UserVoice](http://yathit.uservoice.com/).
+Submit your feature request [here](/kb/new-post/).
 
 For paid user, get support via [email](mailto:support@yathit.com).
 
