--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Submit your feature request [here](/kb/new-post/).
 
 For paid user, get support via [email](mailto:support@yathit.com).
 
-Read [our blogs](/blog/) for more information.
+Read [our blogs](/blogs/) for more information.
 
 {% endcapture %}
 {{ index_content | markdownify }}
