--- a/_posts/2000-01-01-video-data.html
+++ b/_posts/2000-01-01-video-data.html
@@ -1,4 +1,4 @@
-<div class="adminonly">
+<div>
     <div id="login-container" class="pre-auth">This application requires access to your YouTube account.
         Please <a href="#" id="login-link">authorize</a> to continue.
     </div>
@@ -9,5 +9,5 @@
 <div id="playlist-container">
 
 </div>
-{% javascript youtube-player %}
+{% javascript youtube-data %}
 <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
