--- a/_posts/2000-01-01-tutorial-videos.html
+++ b/_posts/2000-01-01-tutorial-videos.html
@@ -1,5 +1,5 @@
 
-<div id="player"></div>
+<iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/es3UCAXU19I?list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" frameborder="0" allowfullscreen></iframe>
 
 <div id="playlist-container">
 
@@ -20,7 +20,7 @@
             {{ forloop.index }}
         </td>
         <td>
-            <a href="#item" data-id="{{ item.id }}" class="video-link">{% icon fa-play %}</a>
+            <a href="https://www.youtube.com/embed/{{ item.id }}?autoplay=1&list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" data-id="{{ item.id }}" class="video-link">{% icon fa-play %}</a>
         </td>
         <td>
             {{ item.title }}
@@ -33,4 +33,3 @@
     </tbody>
 </table>
 
-{% javascript youtube-player %}
