home page update.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,62 @@
 ---
-layout: page
-title: Yathit Knowledge Base
+layout: default
+title: Yathit Support
 meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
 ---
 {% capture index_content %}
 
-
+<div class="centered ydn-section">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" frameborder="0" allowfullscreen></iframe>
+    <a href="tutorial-videos.html">More Tutorial Videos</a>
+</div>
+<div class="ydn-section">
+    <h2 class="centered">Contact Customer Support</h2>
+    <p>
+        Need assistance with something that our knowledge base just can't solve?
+        Please <a href="mailto:support@yathit.com">send and email</a>
+        to customer support and we'll be in touch with you soon (typically same day or next business day). If
+        possible, please provide screenshots along with the platform you are using. Thank you!
+    </p>
+</div>
+<div class="row mt">
+
+    <div class="col-md-3">
+        <h5>Address</h5>
+        <hr>
+        <p>
+            683A Jurong West Central 1,<br/>
+            #09-118<br/>
+            Singapore 641683.
+        </p>
+    </div>
+    <div class="col-md-1 centered">
+        <i class="icon ion-ios-paperplane-outline"></i>
+    </div>
+    <div class="col-md-3">
+        <h5>Contact Us</h5>
+        <hr>
+        <p>
+            <a href="mailto:support@yathit.com">support@yathit.com</a><br/>
+            +65 6610 4544<br/>
+            <a href="https://twitter.com/yathit" style="color:#00aced;font-weight:bold;text-decoration:none" target="_blank"><img src="https://www.yathit.com/images/color-twitter-48.png" width="20" height="20" style="vertical-align:middle"> </a>
+
+            <a href="https://www.linkedin.com/in/kyaw-tun-22898456" style="color:#2c97de;font-weight:bold;text-decoration:none" target="_blank"><img src="https://www.yathit.com/images/color-linkedin-48.png" width="20" height="20" style="vertical-align:middle"></a>
+
+            <a href="https://plus.google.com/u/0/+KyawTun-Yathit" style="color:#2c97de;font-weight:bold;text-decoration:none" target="_blank"><img src="https://www.yathit.com/images/color-googleplus-48.png" width="20" height="20" style="vertical-align:middle" ></a>
+            <a href="https://youtu.be/es3UCAXU19I?list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" style="color:#2c97de;font-weight:bold;text-decoration:none" target="_blank"><img src="https://www.yathit.com/images/color-youtube-48.png" width="20" height="20" style="vertical-align:middle" ></a>
+        </p>
+    </div>
+    <div class="col-md-1 centered">
+        <i class="icon ion-ios-person-outline"></i>
+    </div>
+    <div class="col-md-3">
+        <h5>About Us</h5>
+        <hr>
+        <p>We are trying ourselves useful and honest with customers.</p>
+    </div>
+</div>
 
 
-Submit your feature request [here](/kb/new-post/).
-
-For paid user, get support via [email](mailto:support@yathit.com).
-
-Read [our blogs](/blogs/) for more information.
 
 {% endcapture %}
 {{ index_content | markdownify }}
