--- a/index.html
+++ b/index.html
@@ -20,22 +20,20 @@ meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
 </div>
 <div class="row mt">
 
-    <div class="col-md-3">
-        <h5>Address</h5>
-        <hr>
-        <p>
+    <div class="col-md-4">
+        <h4><i class="fa fa-home"></i> Address</h4>
+
+        <p class="small">
             683A Jurong West Central 1,<br/>
             #09-118<br/>
             Singapore 641683.
         </p>
     </div>
-    <div class="col-md-1 centered">
-        <i class="icon ion-ios-paperplane-outline"></i>
-    </div>
-    <div class="col-md-3">
-        <h5>Contact Us</h5>
-        <hr>
-        <p>
+
+    <div class="col-md-4">
+        <h4><i class="fa fa-paper-plane"></i> Contact Us</h4>
+
+        <p  class="small">
             <a href="mailto:support@yathit.com">support@yathit.com</a><br/>
             +65 6610 4544<br/>
             <a href="https://twitter.com/yathit" style="color:#00aced;font-weight:bold;text-decoration:none" target="_blank"><img src="https://www.yathit.com/images/color-twitter-48.png" width="20" height="20" style="vertical-align:middle"> </a>
@@ -44,13 +42,10 @@ meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
             <a href="https://youtu.be/es3UCAXU19I?list=PL0ZVs2MTcLP82s0qTsQ3RTZXad_dZCSbU" style="color:#2c97de;font-weight:bold;text-decoration:none" target="_blank"><img src="https://www.yathit.com/images/color-youtube-48.png" width="20" height="20" style="vertical-align:middle" ></a>
         </p>
     </div>
-    <div class="col-md-1 centered">
-        <i class="icon ion-ios-person-outline"></i>
-    </div>
-    <div class="col-md-3">
-        <h5>About Us</h5>
-        <hr>
-        <p>We are trying ourselves useful and honest with customers.</p>
+
+    <div class="col-md-4">
+        <h4> <i class="fa fa-user"></i> About Us</h4>
+        <p class="small">Yathit is a Singapore base company with worldwide customer support partners.</p>
     </div>
 </div>
 
