--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Yathit Support
-meta_description: Knowledge Base for Yathit InboxCRM (SugarCRM for Gmail)
+meta_description: Knowledge Base for Yathit Chrome Extension (SugarCRM for Gmail)
 ---
 {% capture index_content %}
 
